// Copyright 2016 The Chromium OS Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

option optimize_for = LITE_RUNTIME;
package trunks;

// The messages in this file correspond to the trunksd IPC interface. Each
// exported method is represented here by a request and response protobuf.

// Inputs for the SendCommand method.
message SendCommandRequest {
  // The raw bytes of a TPM command.
  optional bytes command = 1;
}

// Outputs for the SendCommand method.
message SendCommandResponse {
  // The raw bytes of a TPM response.
  optional bytes response = 1;
}
